--- a/MusicPlayer/app/build.gradle
+++ b/MusicPlayer/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 
+apply plugin: 'android-apt'
+
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.2"
@@ -28,4 +30,6 @@ dependencies {
     compile 'com.android.support:design:24.2.0'
     testCompile 'junit:junit:4.12'
 
+    compile 'com.jakewharton:butterknife:8.4.0'
+    apt 'com.jakewharton:butterknife-compiler:8.4.0'
 }
