FINISHED MINIMUM REQUIREMENTS ! :+1:  :confetti_ball:
NEED TO DO:
General debugging.
Adding more cool features and stuff.

--- a/MusicPlayer/app/src/main/AndroidManifest.xml
+++ b/MusicPlayer/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="com.example.user1.musicplayer">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-feature android:name="android.hardware.telephony" android:required="true" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
